--- a/index.html
+++ b/index.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>influencer</title>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./style/influencer.css">
 </head>
 <body>
-    
+    <!-- nav bar -->
+     <nav class="nav-content">
+        <h2 id="influencer">Influencer Products</h2>
+        <ul class="nav-items">
+            <li><a href="#home">Home</a></li>
+            <li><a href="#products">Products</a></li>
+            <li><a href="#signup">Sign up</a></li>
+            <li><a href="#login">Log In</a></li>
+            <li><a href="#search"><i class="fa-solid fa-magnifying-glass"></i></a></li>
+            <li><a href="#cart"><i class="fa-solid fa-cart-shopping"></i></a></li>
+        </ul>
+        
+     </nav>
 </body>
 </html>
