--- a/index.html
+++ b/index.html
@@ -22,5 +22,19 @@
         </ul>
         
      </nav>
+
+     <!-- hero section -->
+      <section class="hero-content">
+        <div class="hero-title-content">
+            <h1 class="hero-title">Start your journey as influencer</h1>
+            <p class="hero-description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere aut dolor perferendis, totam mollitia culpa!</p>
+            <div ><button class="hero-btn">Probook now <i class="fa-solid fa-arrow-right-long"></i></button></div>
+        </div>
+        <div class="hero-img-content">
+            <div>
+                <img src="./images/main-camera.png" alt="">
+            </div>
+        </div>
+      </section>
 </body>
 </html>
