--- a/index.html
+++ b/index.html
@@ -36,7 +36,20 @@
             </div>
         </div>
       </section>
-      <div class="divider">
+     
+
+      <!-- Company name list -->
+       <div class="company-name-content">
+        <div><img src="./logos/Alibaba.svg" alt=""></div>
+        <div><img src="./logos/Amazon.svg" alt=""></div>
+        <div><img src="./logos/Daraz.pk Logo.svg" alt=""></div>
+        <div><img src="./logos/Ebay.svg" alt=""></div>
+        <div><img src="./logos/Rakuten.svg" alt=""></div>
+        <div><img src="./logos/Walmart.svg" alt=""></div>
+        <div><img src="./logos/Target.svg" alt=""></div>
+       </div>
+
+       <div class="divider">
         <hr>
       </div>
 </body>
