--- a/index.html
+++ b/index.html
@@ -52,5 +52,175 @@
        <div class="divider">
         <hr>
       </div>
+
+      <!-- Popular Collection -->
+       <section class="popular-collection">
+        <h3>Popular Collection</h3>
+        <div class="collection-content">
+            <div class="collection-box">
+                <div class="img-box">
+                    <img src="./images/tripod.png" alt="">
+                </div>
+              <div class="collection-details">
+                <h3 class="collection-title">Flex Tripod</h3>
+                <p class="collection-price">$50.48</p>
+                <p class="rating">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-regular fa-star-half-stroke"></i>
+                </p>
+                <p class="collection-description">Wordwide shifting available
+                    Buyers protection possible!</p>
+              </div>
+            </div>
+            <div class="collection-box">
+                <div class="img-box">
+                    <img src="./images/mic.png" alt="">
+                </div>
+                
+                <div class="collection-details">
+                    <h3 class="collection-title">Microphone</h3>
+                <p class="collection-price">$120.25</p>
+                <p class="rating">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-regular fa-star-half-stroke"></i>
+                </p>
+                <p class="collection-description">Wordwide shifting available
+                    Buyers protection possible!</p>
+                </div>
+            </div>
+            <div class="collection-box">
+                <div class="img-box">
+                    <img src="./images/airpod.png" alt="">
+                </div>
+               <div class="collection-details">
+                <h3 class="collection-title">Airbuds</h3>
+                <p class="collection-price">$100.00</p>
+                <p class="rating">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-regular fa-star-half-stroke"></i>
+                </p>
+                <p class="collection-description">Wordwide shifting available
+                    Buyers protection possible!</p>
+               </div>
+            </div>
+            <div class="collection-box">
+                <div class="img-box">
+                    <img src="./images/drone.png" alt="">
+                </div>
+               <div class="collection-details">
+                <h3 class="collection-title">Drone</h3>
+                <p class="collection-price">$980.25</p>
+                <p class="rating">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-regular fa-star-half-stroke"></i>
+                </p>
+                <p class="collection-description">Wordwide shifting available
+                    Buyers protection possible!</p>
+               </div>
+            </div>
+            <div class="collection-box">
+                <div class="img-box">
+                    <img src="./images/lights.png" alt="">
+                </div>
+                <div class="collection-details">
+                    <h3 class="collection-title">Light Setup</h3>
+                <p class="collection-price">$120.00</p>
+                <p class="rating">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-regular fa-star-half-stroke"></i>
+                </p>
+                <p class="collection-description">Wordwide shifting available
+                    Buyers protection possible!</p>
+                </div>
+            </div>
+            <div class="collection-box">
+                <div class="img-box">
+                    <img src="./images/setup.png" alt="">
+                </div>
+             <div class="collection-details">
+                <h3 class="collection-title">Photoshoot set</h3>
+                <p class="collection-price">$820.40</p>
+                <p class="rating">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-regular fa-star-half-stroke"></i>
+                </p>
+                <p class="collection-description">Wordwide shifting available
+                    Buyers protection possible!</p>
+             </div>
+            </div>
+            <div class="collection-box">
+                <div class="img-box">
+                    <img src="./images/camera.png" alt="">
+                </div>
+               <div class="collection-details">
+                <h3 class="collection-title">Vlogging Camera</h3>
+                <p class="collection-price">$1800.80</p>
+                <p class="rating">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-regular fa-star-half-stroke"></i>
+                </p>
+                <p class="collection-description">Wordwide shifting available
+                    Buyers protection possible!</p>
+               </div>
+            </div>
+            <div class="collection-box">
+               <div class="img-box">
+                <img src="./images/single-light.png" alt="">
+               </div>
+               <div class="collection-details">
+                <h3 class="collection-title">Green Screen</h3>
+                <p class="collection-price">$25.48</p>
+                <p class="rating">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-regular fa-star-half-stroke"></i>
+                </p>
+                <p class="collection-description">Wordwide shifting available
+                    Buyers protection possible!</p>
+               </div>
+            </div>
+            <div class="collection-box">
+               <div class="img-box">
+                <img src="./images/action.png" alt="">
+               </div>
+          <div class="collection-details">
+            <h3 class="collection-title">Action Camera</h3>
+            <p class="collection-price">$380.00</p>
+            <p class="rating">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-regular fa-star-half-stroke"></i>
+            </p>
+            <p class="collection-description">Wordwide shifting available
+                Buyers protection possible!</p>
+          </div>
+            </div>
+        </div>
+       </section>
 </body>
 </html>
