features section added with responsive

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="hero-title-content">
             <h1 class="hero-title">Start your journey as influencer</h1>
             <p class="hero-description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere aut dolor perferendis, totam mollitia culpa!</p>
-            <div ><button class="hero-btn">Probook now <i class="fa-solid fa-arrow-right-long"></i></button></div>
+            <div ><button class="hero-btn">Probook now <span class="btn-arow"><i class="fa-solid fa-arrow-right-long"></i></span></button></div>
         </div>
         <div class="hero-img-content">
             <div>
@@ -220,7 +220,27 @@
                 Buyers protection possible!</p>
           </div>
             </div>
+            
+        </div>
+        <div class="see-more">
+            <button>See More <span class="btn-arow"><i class="fa-solid fa-arrow-right-long"></i></span></button>
         </div>
        </section>
+
+       <!-- Featured product as one place -->
+        <section>
+            <div class="features-content">
+                <div class="img-container">
+                    <img src="./images/gear.png" alt="">
+                </div>
+                <div class="features-container">
+                    <h2 class="features-title">Featured products at one place</h2>
+                    <p class="features-description">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                    <div>
+                        <button class="btn-join">Join Now  <span class="btn-arow"><i class="fa-solid fa-arrow-right-long"></i></span></button>
+                    </div>
+                </div>
+            </div>
+        </section>
 </body>
 </html>
