footer section added

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
         
      </nav>
 
-     <!-- hero section -->
+     <main>
+        <!-- hero section -->
       <section class="hero-content">
         <div class="hero-title-content">
             <h1 class="hero-title">Start your journey as influencer</h1>
@@ -242,5 +243,21 @@
                 </div>
             </div>
         </section>
+     </main>
+
+        <!-- Footer Section -->
+        <footer>
+         <div class="footer-content">
+            <h3 class="footer-title">Influencer products</h3>
+            <p>Copyright © 2020  influencer products</p>
+            <p>All rights reserved</p>
+            <div class="footer-social-media">
+                <div><i class="fa-brands fa-instagram"></i></div>
+                <div><i class="fa-solid fa-globe"></i></div>
+                <div><i class="fa-brands fa-twitter"></i></div>
+                <div><i class="fa-brands fa-youtube"></i></div>
+            </div>
+         </div>
+        </footer>
 </body>
 </html>
